V2. Apaga a lista de cores e mantem moldura usando foreach

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
   <button onclick="mostraTintas(this)" data-button="show">Aluratintas em estoque:</button>
 
-  <ul class="lista" data-view="hidden" data-type="lista">
-    <li cor="laranja" tipo="tinta-exterior" class="item">Tinta laranja</li>
-    <li cor="vermelho" tipo="tinta-interior" class="item">Tinta vermelha</li>
-    <li cor="branco" tipo="tinta-interior" class="item">Tinta branca</li>
-    <li cor="amarelo" tipo="tinta-exterior" class="item">Tinta amarela</li>
-    <li cor="rosa" tipo="tinta-exterior" class="item">Tinta rosa</li>
-    <li cor="preto" tipo="tinta-exterior" class="item">Tinta preta</li>
+  <ul class="lista" data-type="lista">
+    <li data-view="hidden" cor="laranja" tipo="tinta-exterior" class="item">Tinta laranja</li>
+    <li data-view="hidden" cor="vermelho" tipo="tinta-interior" class="item">Tinta vermelha</li>
+    <li data-view="hidden" cor="branco" tipo="tinta-interior" class="item">Tinta branca</li>
+    <li data-view="hidden" cor="amarelo" tipo="tinta-exterior" class="item">Tinta amarela</li>
+    <li data-view="hidden" cor="rosa" tipo="tinta-exterior" class="item">Tinta rosa</li>
+    <li data-view="hidden" cor="preto" tipo="tinta-exterior" class="item">Tinta preta</li>
   </ul>
 
   <button onclick="hideTintas(this)">Limpa estoque</button>
